build: allow all annotation processors to run